Trying to fix styling on mobile device when virtual keyboard is visible

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,58 +1,91 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing:
-  border-box;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+  overflow:hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 body {
-  font: 13px Helvetica, Arial;
+  color: #2C2B3C;
+  font-size: 100%;
+  background-color: #fef0f9;
+  font-family: Helvetica;
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  min-width: 100%;
+}
+
+.clearfix{
+  clear: both;
+  margin: 0;
+  visibility: hidden;
+  padding: 0;
+}
+
+.messageBox {
+  height: 120vh;
+}
+
+.messageBox h1 {
 }
 
 .messageList {
-  padding: 0;
-  list-style: none;
-}
-
-.messageList li {
+  width: 95%;
   margin: 0 auto;
-  margin-top: 0.625em;
-  padding: 0.625em 1.25em;
-  width: 80%;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-.messageList li:nth-child(odd){
-  background: #c9f2ff;
-}
-
-.messageList li:nth-child(even){
-  background-color: #facce3;
+  padding: 0.625em;
+  list-style: none;
+  overflow: scroll;
+  position: relative;
+  z-index: 1;
 }
 
 .messageForm {
-  background: #dddddd;
-  padding: 3px;
-  position: fixed;
-  bottom: 0;
   width: 100%;
+  background-color: #eee;
+  padding: 0.3125em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
 }
 
-form input[type="text"] {
-  border: 0;
-  padding: 10px;
-  width: 90%;
-  margin-right: .5%;
-}
-
-form input[type="text"]:focus {
-  outline: none;
-}
-
-form input[type="submit"] {
-  width: 9%;
-  color: #555;
-  background-color: #a9fed2;
+.messageForm input {
+  padding: 0.3125em;
+  font-size: 16px;
   border: none;
-  padding: 10px;
+  border-radius: 0;
+  display: inline-block;
+}
+
+.messageForm input[type="text"]{
+  width: 80%;
+}
+
+.messageForm input[type="submit"]{
+  -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+  width: 20%;
+  color: #fafafa;
+  background-color:#00ffd9;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 0;
+}
+
+.message {
+  width: 80%;
+  margin: 0 auto;
 }
